--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,24 @@
 padding-right: 5em!important;
 margin-left: 5em;
 }
+.btn-get-started {
+  font-family: "Raleway", sans-serif;
+  font-weight: 500;
+  font-size: 15px;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 9px 15px;
+  border-radius: 50px;
+  transition: 0.5s;
+  margin-top: 5px;
+  border: 2px solid #ffc107;
+ color: #000000;
+}
+
+.btn-get-started:hover {
+  background: #ffc107;
+	color: #fff;
+}
 
 /**
 * Template Name: Baker - v2.1.0
@@ -516,7 +534,7 @@ section {
 }
 
 .clients img {
-  max-width: 45%;
+  max-width: 65%;
   transition: all 0.4s ease-in-out;
   display: inline-block;
   padding: 15px 0;
